[package]
name = "flacq"
version = "0.1.0"
edition = "2021"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
description = "Simple free lossless audio compressor based on q_compress"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.q_compress]
version = "0.7.1"
git = "http://github.com/BartMassey-upstream/quantile-compression"
branch = "16-bit"

[dependencies]
anyhow = "1.0"
hound = "3.4"
